2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-10-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_ENABLE_MULTILIB.
	* Makefile.am: Add CVS-Id.

2002-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AM_INIT_AUTOMAKE.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-30	Joel Sherrill <joel@OARcorp.com>

	* rtems.adb (IO_Initialize): Make this match the C prototype.

2002-08-27	Joel Sherrill <joel@OARcorp.com>

	* rtems.ads: Corrected binding for Io_Initialize.

2001-08-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: New.
	* Makefile.am: New.
	* .cvsignore: New.

2001-02-01	Joel Sherrill <joel@OARcorp.com>

	* rtems.ads, rtems.adb: Formatting cleaned up.  Task based timer
	directives added.  This is Timer_Initiate_Server, 
	Timer_Server_Fire_After, and Timer_Server_Fire_When. 

2001-02-01	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.
